* history: #2480 probably fixed: crash when loading last day/week/month history into chat widget on 32bit systems (Vogel)
* history: various security improvements pointed by Mateusz Goik from http://www.aliantsoft.pl (Vogel)
* history_migration: #2503 fixed: crashes during history import from Kadu 0.6.5 (Vogel)

﻿+++ version 0.11.0
* gui: #2454 fixed: memory leak in emoticons selector (Juzef)

+++ version 0.11.0-rc3
* gui: #2421 fixed: warning when opening chat conference window (Vogel)
* spellchecker: #2422 fixed: crash in the Highlighter::removeAll() method (beevvy)
* protocol: #2433 fixed: incorrect status behaviour when no passwors is available (Vogel)
* chat-styles: #2438 fixed: crash when window were closed before asynchronous history was loaded (Vogel)
* gui: #2439 fixed: segfault after second opening of configuration window (Vogel)
* gui: #2429 fixed: crash on Ctrl+V in chat window (Vogel)
* gadu: #2423 fixed: do not crash Gadu randomly (Vogel)
* status: #2444 fixed: prevent autoaway from spamming with XMPP away/xaway status changes (beevvy)
* core: #2426 fixed: regression that caused crashes and unsaved configuration changes when closing system with opened Kadu window (beevvy)
* core: #2445 worked around: a long standing Windows issue that resulted in unsaved configuration changes and unsaved history with new contacts (beevvy)

+++ version 0.11.0-rc2
* sound: dropped libsndfile dependency (beevvy)
* gadu: #2410 fixed: after waking up from suspend Gadu is not reconnecting (WhE)
* gui: #2417 fixed: properly update icons of Kadu windows (beevvy)
* translations: enabled Russian language (Vogel)
* gadu: fixed importing from 0.6.5.x configurations (Vogel)
* spellchecker: #2422 fixed: crash on plugin unload or Kadu exit (beevvy)

+++ version 0.11.0-rc1
* hints: #2266 fixed: restored word wraping in hints (Vogel, beevvy)
* sms: #2394 fixed: Orange Multibox SMS length limit is not ignored in Send SMS window anymore (Vogel)